<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:fitsSystemWindows="true"

    android:orientation="vertical">

    <android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
       >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:gravity="center">

            <com.moyo.carzrideon.Views.CustomTextView
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:text="@string/app_name"
                android:gravity="center"
                android:id="@+id/title"
                android:layout_marginRight="50dp"

                android:textColor="@color/toolBarTextColor"
                android:textSize="18sp" />





        </RelativeLayout>

    </android.support.v7.widget.Toolbar>

    <android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/drawerLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/carzridon_home_background"
                android:scaleType="centerCrop"
                />

        </FrameLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >




            <ImageView
                android:id="@+id/circleView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@+id/message"
                android:visibility="gone"
                android:layout_centerHorizontal="true"
               android:layout_alignParentTop="true"
                android:layout_marginTop="16dp"
                android:layout_gravity="top"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_weight="1"
                android:src="@drawable/carzrideonlogo" />

            <TextView
                android:id="@+id/message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_above="@+id/linearlayout"
                android:layout_weight="4"
                android:gravity="center"
                android:textStyle="bold|italic"
                android:text="Share Ride - Share the Joy"
                android:textColor="@android:color/white"
                android:paddingBottom="88dp"
                android:textSize="16sp" />

            <com.google.android.gms.ads.AdView
                android:id="@+id/adView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                ads:adSize="BANNER"
                android:layout_above="@+id/linearlayout"
                ads:adUnitId="@string/banner_home_footer">
            </com.google.android.gms.ads.AdView>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/linearlayout"
                android:layout_alignParentBottom="true"
                android:layout_gravity="bottom"

                android:weightSum="2">

               <LinearLayout
                   android:layout_width="0dp"
                   android:layout_height="wrap_content"
                   android:layout_weight="1"
                   android:layout_marginRight="2dp"
                   android:background="@android:color/black"
                   >
                  
                  <ImageView
                      android:layout_width="37dp"
                      android:layout_height="24dp"
                     android:layout_gravity="center_vertical"
                      android:layout_marginLeft="27dp"
                      android:src="@drawable/take_ride"
                      />

                   <Button
                       android:id="@+id/searchPlace"
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"

                       android:gravity="left|center"
                       android:paddingLeft="10dp"
                       android:paddingTop="10dp"
                      android:background="@android:color/transparent"
                       android:text="@string/search"
                       android:textColor="@color/textGreen" />
                   
               </LinearLayout>





                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"

                    android:background="@android:color/black"
                    >

                    <ImageView
                        android:layout_width="37dp"
                        android:layout_height="24dp"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="27dp"
                        android:src="@drawable/offer_ride"
                        />

                    <Button
                        android:id="@+id/placeRide"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"

                        android:gravity="left|center"
                        android:paddingLeft="10dp"
                        android:paddingTop="10dp"
                        android:background="@android:color/transparent"
                        android:text="@string/post"
                        android:textColor="@color/textGreen" />

                </LinearLayout>
            </LinearLayout>

        </RelativeLayout>


        <android.support.design.widget.NavigationView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/shitstuff"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:layout_marginTop="-24dp"
            android:background="@android:color/white"
            app:headerLayout="@layout/navigationdrawer_header"

            app:itemTextColor="@color/colorPrimary"
             >
            <include layout="@layout/layout_navigation_drawer"/>
            </android.support.design.widget.NavigationView>

    </android.support.v4.widget.DrawerLayout>

</LinearLayout>


